# open-hypergraphs

./: .readthedocs.yaml  CHANGELOG.md  README.md  mypy.ini  pyproject.toml
docs/source/: api_reference.rst  conf.py  index.rst  refs.bib
open_hypergraphs/: __init__.py  finite_function.py  hypergraph.py  open_hypergraph.py
open_hypergraphs/array/: __init__.py  backend.py  cupy.py  numpy.py
open_hypergraphs/functor/: __init__.py  functor.py  optic.py
open_hypergraphs/numpy/: __init__.py  layer.py  types.py
tests/: backend.py  test_finite_function.py  test_functor.py  test_hypergraph.py  test_layer.py  test_open_hypergraph.py  test_optic.py  test_vector.py
tests/spec/: finite_function.py  hypergraph.py  open_hypergraph.py
tests/strategy/: finite_function.py  hypergraph.py  numpy.py  open_hypergraph.py  random.py
