[project]
name = "open-hypergraphs"
version = "0.1.2"
authors = [
  { name="Paul Wilson", email="paul@statusfailed.com" }
]
description = "open hypergraphs"
readme = "README.md"
requires-python = ">= 3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "numpy~=1.23.3",
  "scipy~=1.10.0",
]
[project.optional-dependencies]
dev = [
  "hypothesis",
  "pytest",
]

[project.urls]
"Homepage" = "https://github.com/statusfailed/open-hypergraphs/"
"Github" = "https://github.com/statusfailed/open-hypergraphs/"

# export type annotations
[tool.setuptools.package-data]
"open_hypergraphs" = ["py.typed"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["open_hypergraphs"]

[tool.pytest.ini_options]
testpaths = [
  "tests"
]
